--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/supabase-js": "^2.84.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "supabase": "^2.62.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
