--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.84.0",
+    "@types/compression": "^1.8.1",
+    "compression": "^1.8.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "supabase": "^2.62.5",
@@ -99,6 +101,8 @@
     "typescript": "^5.9.2",
     "vaul": "^1.1.2",
     "vite": "^7.1.2",
+    "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-pwa": "^1.1.0",
     "vitest": "^3.2.4"
   },
   "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
