--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "compression": "^1.8.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "react-input-mask": "^2.0.4",
     "supabase": "^2.62.5",
     "zod": "^3.25.76"
   },
